--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://rajkumar-rithik.github.io/jekyll-theme-chirpy/'
+url: 'https://rajkumar-rithik.github.io/'
 
 author: your_full_name                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /jekyll-theme-chirpy/assets/img/sample/avatar.jpg   # support internet resources
 
 github:
   username: rajkumar-rithik             # change to your github username
@@ -46,7 +46,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 #--------------------------
 
 # if your site type is Project Pages site, change below value to '/projectname'
-baseurl: ''
+baseurl: '/jekyll-theme-chirpy'
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Kolkata
