--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: Data Science                          # the main title
 
-tagline: Learn to listen Data   # it will display as the sub-title
+tagline: Learn to listen the Data   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://blog.online-python.com'
+url: 'http://127.0.0.1:4000'
 
 author: your_full_name                  # change to your full name
 
@@ -46,7 +46,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 #--------------------------
 
 # if your site type is Project Pages site, change below value to '/projectname'
-baseurl: '/'
+baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Kolkata
