--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'http://127.0.0.1:4000'
+url: 'https://blog.online-python.com'
 
 author: your_full_name                  # change to your full name
 
