[Automation] Updated the Lastmod for post(s).

--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,12 +1,15 @@
 -
+  filename: 'python-basics'
+  lastmod: '2020-05-08 21:35:11 +0530'
+-
   filename: 'customize-the-favicon'
-  lastmod: '2020-04-07 02:11:50 +0800'
+  lastmod: '2020-05-08 21:35:11 +0530'
 -
   filename: 'getting-started'
-  lastmod: '2020-04-13 00:38:56 +0800'
+  lastmod: '2020-05-08 21:35:11 +0530'
 -
   filename: 'write-a-new-post'
-  lastmod: '2020-04-13 00:38:56 +0800'
+  lastmod: '2020-05-08 21:35:11 +0530'
 -
   filename: 'text-and-typography'
-  lastmod: '2020-05-06 19:01:43 +0530'
+  lastmod: '2020-05-08 21:35:11 +0530'
