--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://blog.online-python.com'
+url: 'http://localhost:4000'
 
 author: your_full_name                  # change to your full name
 
