--- a/_data/tabs.yml
+++ b/_data/tabs.yml
@@ -1,5 +1,9 @@
 #  The tab data.
 #  v2.1
+#  https://github.com/cotes2020/jekyll-theme-chirpy
+#  © 2020 Cotes Chung
+#  MIT Licensed
+
 
 -
   name: Home
