Updates to theme

--- a/_data/tabs.yml
+++ b/_data/tabs.yml
@@ -24,6 +24,11 @@
   url: archives
   icon: "fas fa-archive"
 -
+  name: "Contact"
+  icon: "fas fa-envelope"
+  path: tabs
+  url: contact
+-
   name: "About"
   icon: "fas fa-info"
   path: tabs
