--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'http://localhost:4000'
-# url: 'https://blog.online-python.com'
+# url: 'http://localhost:4000'
+url: 'https://blog.online-python.com'
 
 author: your_full_name                  # change to your full name
 
@@ -25,6 +25,9 @@ github:
 
 twitter:
   username: twitter_username            # change to your twitter username
+
+facebook:
+  username: facebook_username            # change to your twitter username
 
 social:
   name: your_full_name                  # it will shows as the copyright owner in Footer
